--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image and Text with Gap</title>
-    <link rel="stylesheet" href="Assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header>Sakthi's Portfolio</header>
 
     <nav>
         <a href="index.html">Home</a>
@@ -31,7 +29,7 @@
             </div>
 
 
-            <p> My Innovation: A Portable Glaucoma Monitoring Device
+            <p class="p"> My Innovation: A Portable Glaucoma Monitoring Device
             
             Solution Concept:
             
