--- a/research.html
+++ b/research.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Report</title>
-    <link rel="stylesheet" href="Assets/css/styles.css"> <!-- Linking to your external stylesheet -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header>Sakthi's Portfolio</header>
 
     <nav>
         <a href="index.html">Home</a>
@@ -34,37 +32,37 @@
 
 
 
-        <h3>Abstract:</h3>
+        <h3 class="p">Abstract:</h3>
         <p>
             Virtual power plants (VPPs), as decentralized energy ecosystems, have emerged as a promising solution to address the challenges of grid integration for renewable energy sources. By aggregating diverse energy resources and enabling their coordinated management, VPPs offer a flexible and efficient means to balance supply and demand, enhance grid stability, and reduce carbon emissions. Advanced technologies like artificial intelligence, blockchain, and energy storage are pivotal in enhancing VPP capabilities. The importance of supportive policies and regulations is emphasized to foster VPP development and tackle challenges related to grid interconnection, cybersecurity, and consumer protection.
         </p>
 
-        <h3>Introduction:</h3>
+        <h3 class="p">Introduction:</h3>
         <p>
             A virtual power plant (VPP) is a system of distributed energy resources—such as rooftop solar panels, electric vehicle chargers, and smart water heaters—that work together to balance energy supply and demand on a large scale. They are typically managed by local utility companies who oversee this balancing act. The “virtual” aspect of VPPs refers to their lack of a central physical facility like traditional coal or gas plants. By aggregating batteries and solar panels, VPPs can perform many functions of conventional power plants, including real-time energy usage shaping and grid operator control of energy demand.
         </p>
 
-        <h3>Importance of Virtual Power Plants:</h3>
+        <h3 class="p">Importance of Virtual Power Plants:</h3>
         <p>
             Grid operators must meet peak demand times, often relying on gas “peaker” plants. VPPs reduce reliance on these plants and contribute to lowering energy costs and emissions. The Department of Energy aims to expand national VPP capacity to 80 to 160 GW by 2030, equating to a significant reduction in fossil fuel plants. Research indicates that using distributed sources during peak demand is up to 60% more cost-effective than relying on gas plants. Moreover, VPPs empower consumers by encouraging them to participate actively in energy systems and contribute back to the grid, increasing engagement with the transition to clean energy.
         </p>
 
-        <h3>Technological Advancements:</h3>
+        <h3 class="p">Technological Advancements:</h3>
         <p>
             VPPs leverage advanced energy management systems and predictive analytics to optimize real-time performance. IoT devices enhance communication, enabling efficient energy management through smart grids. Technological innovations like battery storage and solar panel efficiency improvements contribute significantly to VPP capabilities. Blockchain technology ensures transparent, secure peer-to-peer energy trading, further streamlining operations.
         </p>
 
-        <h3>Future of Virtual Power Plants:</h3>
+        <h3 class="p">Future of Virtual Power Plants:</h3>
         <p>
             As distributed energy sources expand, VPP systems' capacity to balance electricity demand and supply in real-time will grow. AI improvements will enhance the coordination of diverse assets within VPPs. Moreover, regulatory interest in VPPs is on the rise, with states like California funding research into their integration into the grid system. Standardizing VPP deployment can further accelerate growth by simplifying consumer enrollment and replicating successful projects nationwide.
         </p>
 
-        <h3>Conclusion:</h3>
+        <h3 class="p">Conclusion:</h3>
         <p>
             Virtual power plants represent a transformative solution to renewable energy integration while maintaining grid stability. VPPs not only offer benefits like backup power and increased grid resilience but also contribute to mitigating climate change by reducing reliance on fossil fuels. With ongoing advancements and regulatory support, VPPs are set to become an integral part of the modern energy grid, providing a sustainable and efficient energy solution.
         </p>
 
-        <h3>References:</h3>
+        <h3 class="p">References:</h3>
         <ul>
             <li>M. A. Alshehri, A. A. Al-Tamimi, and M. H. Al-Marshad. This article provides a comprehensive review of VPPs, including their benefits, technical requirements, and economic feasibility.</li>
             <li>J. M. Guerrero, J. C. Vasquez, J. Matas, M. Castilla, and L. García-Posada. This article explores the potential of VPPs to enhance the integration of renewable energy into the grid and improve grid stability.</li>
