--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="Assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <header>Sakthi's Portfolio</header>
+   
 
     <nav>
         <a href="index.html">Home</a>
