--- a/assignments.html
+++ b/assignments.html
@@ -8,16 +8,17 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background-color: black;
             color: #333;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #2c3e50;
+            background-color: orangered;
             color: white;
             padding: 20px;
             text-align: center;
+            margin-top: -20px;
         }
         .container {
             display: flex;
@@ -54,18 +55,23 @@
             bottom: 0;
             width: 100%;
         }
-        .btn-container {
+        .btn-container  {
+           
     margin-top: 20px;
 }
 
 .btn {
-    background-color: hsl(240, 45%, 22%);
-    color: white;
+    background-color: hsl(190, 85%, 54%);
+    color: black;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     margin: 10px;
     display: inline-block;
+}
+.btn:hover{
+    color:white;
+    background-color: #333;
 }
     </style>
 </head>
